restruct-2: update,del handlers
