# intermediate-go-microservices/gorilla_restfull_microservice/handlers/products.go
@@ -52,71 +52,6 @@ func getProductID(r *http.Request) int {
 }
 
 /*
-restful update product method on Products handler struct
-try curl localhost:5000/1 -X PUT -d '{"name": "Choc-o-Moc"}'
-*/
-func (p Products) UpdateProducts(rw http.ResponseWriter, r *http.Request) {
-
-	// 📝 mux.Vars(r) is a map where r is http Request will hold the extracted uri/param provided while defining subrouter at upper level
-	vars := mux.Vars(r)
-
-	id, err := strconv.Atoi(vars["id"])
-	if err != nil {
-		http.Error(rw, "failed to cast id string to int in request param url", http.StatusBadRequest)
-		return
-	}
-
-	p.tracer.Println("Handle PUT Products", id)
-
-	// 📝 Grab the unmarshalled product from KeyProduct struct context and store in prod
-	prod := r.Context().Value(KeyProduct{}).(data.Product)
-
-	// make the method call to update product by extracetd id in data access layer products.go
-	err = data.UpdateProduct(id, &prod)
-	if err == data.ErrProductNotFound {
-		http.Error(rw, "Product not found", http.StatusNotFound)
-		return
-	}
-
-	if err != nil {
-		p.tracer.Println(err)
-		http.Error(rw, "failed to update product", http.StatusInternalServerError)
-		return
-	}
-}
-
-// swagger:route DELETE /products/{id} products deleteProduct
-// Returns a list of products
-// responses:
-//	201: noContent
-
-// Delete/Remove a product from DB via id
-func (p *Products) Delete(rw http.ResponseWriter, r *http.Request) {
-	id := getProductID(r)
-
-	p.tracer.Println("deleting record id", id)
-
-	err := data.DeleteProduct(id)
-	if err == data.ErrProductNotFound {
-		p.tracer.Println("deleting record id does not exist")
-
-		rw.WriteHeader(http.StatusNotFound)
-		data.ToJSON(&GenericError{Message: err.Error()}, rw)
-		return
-	}
-
-	if err != nil {
-		p.tracer.Println("deleting record", err)
-
-		rw.WriteHeader(http.StatusInternalServerError)
-		data.ToJSON(&GenericError{Message: err.Error()}, rw)
-		return
-	}
-
-	rw.WriteHeader(http.StatusNoContent)
-}
-
-/*
 Middleware that validates the payload while creating or updating product
 */
 func (p Products) ProductValidationMiddleware(next http.Handler) http.Handler {
